# aoc2021

./: README.md  aoc  aoc.hs  aoc.sh  aoc2021.cabal  fetch  session.txt  times.js  util.sh
src/: Main.hs  Α01.hs  Β02.hs  Γ03.hs  Δ04.hs  Ε05.hs  Ζ06.hs  Η07.hs  Θ08.hs  Ι09.hs  Κ10.hs  Λ11.hs  Μ12.hs  Ν13.hs  Ξ14.hs  Ο15.hs  Π16.hs  Ρ17.hs  Σ18.hs  Τ19.hs  Υ20.hs  Φ21.hs  Χ22.hs  Ψ23.hs  Ω24.hs
tests/: 16.txt  18.txt
