cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author: jrvieira
maintainer: github@jrvieira.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: README.md
   , aoc.hs
   , aoc

executable aoc2021
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Zero.Zero
      , Zero.Color
      , Α01, Β02, Γ03, Δ04
      , Ε05, Ζ06, Η07, Θ08
      , Ι09, Κ10, Λ11, Μ12
      , Ν13, Ξ14, Ο15, Π16
      , Ρ17, Σ18, Τ19, Υ20
      , Φ21, Χ22, Ψ23, Ω24

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>=4.14.3.0
      , containers
      , process
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: BangPatterns
      , BinaryLiterals
      , GeneralizedNewtypeDeriving
--    , LexicalNegation
      , OverloadedLists
      , OverloadedStrings
      , PartialTypeSignatures
      , ScopedTypeVariables
      , TupleSections
